# exoclasma-fastq

./: README.md  pyproject.toml
tests/: testFromMND.sh  testFromSRA.sh
tests/testdata/: merged_nodups_test.txt
